--- a/src/pages/first/first.html
+++ b/src/pages/first/first.html
@@ -1,11 +1,4 @@
 
-<ion-header>
-
-  <!-- <ion-navbar>
-    <ion-title>first</ion-title>
-  </ion-navbar> -->
-
-</ion-header>
 
 
 <ion-content>
@@ -22,8 +15,8 @@
     <!-- <button ion-button id="login" type="submit">Mentor</button>
     <button ion-button id="login" type="submit">Startup</button>
     <button ion-button id="login" type="submit">Guest</button> -->
-    <!-- <a href="#" class="form-link">Sign Up</a>
-    <a href="#" class="form-link">Forgot Password?</a> -->
+    <a (click)="gotoSignup()" class="form-link">Sign Up</a>
+    <a href="#" class="form-link">Forgot Password?</a>
   </form>
 
 </div>
