Before adding chat

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,14 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      <img src="assets/Images/Sai@1.png" style="height: 1.4cm;width: 2cm;margin-top: 0.3cm" >
+      HOME
+      <!-- <img src="assets/Images/Sai@1.png" style="height: 1.4cm;width: 2cm;margin-top: 0.3cm" > -->
     </ion-title>
+    <ion-buttons end>
+  <button (click)="gotoChat()" ion-button icon-only color="white">
+    <ion-icon name="text"></ion-icon>
+  </button>
+</ion-buttons>
   </ion-navbar>
 </ion-header>
 
