--- a/src/pages/first/first.html
+++ b/src/pages/first/first.html
@@ -3,21 +3,36 @@
 
 <ion-content>
 
-  <div class="screen">
-  <div style="margin-left: 10%;    -webkit-filter: drop-shadow(5px 5px 5px #222);
-    filter:         drop-shadow(5px 5px 5px #222); ">
-    <img src="assets/Images/Sai@1.png" style="margin-top: 2%;">
-  </div>
-  <form id="sign-in">
-    <input class="info" id="username" type="text" name="username" placeholder="username">
-    <input class="info" id="password" type="password" name="password" placeholder="password">
-<button ion-button id="login" type="submit">Log in</button>
-    <!-- <button ion-button id="login" type="submit">Mentor</button>
+
+<!--
+  <form >
+    <input class="info"  type="text" name="email" placeholder="email">
+    <input class="info"  type="password" name="password" placeholder="password">
+<button ion-button  type="submit">Log in</button>
+    <button ion-button id="login" type="submit">Mentor</button>
     <button ion-button id="login" type="submit">Startup</button>
-    <button ion-button id="login" type="submit">Guest</button> -->
+    <button ion-button id="login" type="submit">Guest</button>
+
+  </form> -->
+
+  <div class="screen">
+    <div style="margin-left: 5%;-webkit-filter: drop-shadow(5px 5px 5px #222);filter: drop-shadow(5px 5px 5px #222); ">
+      <img src="assets/Images/Sai@1.png" >
+    </div>
+
+<ion-list id="sign-in" >
+    <ion-item no-lines style="border-radius: 5%;margin-bottom: 20px;">
+      <ion-input class="info" [(ngModel)] = "usercreds.email" type="text" placeholder="email"></ion-input>
+    </ion-item>
+    <ion-item style="border-radius: 5%;">
+      <ion-input class="info" [(ngModel)] = "usercreds.password" type="password" placeholder="password"></ion-input>
+    </ion-item>
+
     <a (click)="gotoSignup()" class="form-link">Sign Up</a>
-    <a href="#" class="form-link">Forgot Password?</a>
-  </form>
+    <a float-right href="#" class="form-link">Forgot Password?</a>
+  </ion-list>
+
+  <button ion-button id="login" (click)="login(usercreds)">Login</button>
 
 </div>
 
