--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the SignupPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>signup</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
+  <div class="screen">
+    <div style="margin-left: 5%;-webkit-filter: drop-shadow(5px 5px 5px #222);filter: drop-shadow(5px 5px 5px #222); ">
+      <img src="assets/Images/Sai@1.png" >
+    </div>
+
+  <ion-list id="sign-in">
+     <ion-item no-lines style="border-radius: 5%;margin-bottom: 20px;">
+       <ion-input class="info" [(ngModel)] = "newcreds.email" type="text" placeholder="email"></ion-input>
+     </ion-item>
+
+     <ion-item style="border-radius: 5%;">
+       <ion-input class="info" placeholder="password" [(ngModel)] = "newcreds.password" type="password"></ion-input>
+     </ion-item>
+     <a (click)="gotoLogin()" class="form-link">Already Registered? Log In</a>
+   </ion-list>
+   <button ion-button id="login" (click)="register(newcreds)">Register</button>
+
+</div>
 </ion-content>
