--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
       HOME
       <!-- <img src="assets/Images/Sai@1.png" style="height: 1.4cm;width: 2cm;margin-top: 0.3cm" > -->
     </ion-title>
-    <ion-buttons end>
+    <ion-buttons end *ngIf="loggedin">
   <button (click)="gotoChat()" ion-button icon-only color="white">
     <ion-icon name="text"></ion-icon>
   </button>
